<resources>
    <string name="app_name">Ayesh Android labs</string>
    <string name="email_text">Enter your email address:</string>
    <string name="password_text">Type your password:</string>
    <string name="edit_email">Type email here</string>
    <string name="button_message">Login</string>
    <string name="receive">RECIEVE</string>
    <string name="send">SEND</string>
    <string name="name">Name</string>
    <string name="messageText" translatable="false">Message goes here</string>
    <string name="time" translatable="false">Time goes here</string>
    <string name="message_goes_here" translatable="false">Message goes here</string>
    <string name="time_goes_here" translatable="false">Time goes here</string>
    <string name="send_or_receive" translatable="false">send receive goes here</string>
    <string name="database_id" translatable="false">Database id goes here</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="close" translatable="false">Close</string>

</resources>